[workspace]
resolver = "2"
members = [
    "programs/arkly-token",
    "programs/property-vault", 
    "programs/governance",
    "programs/yield-distributor"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
