[package]
name = "arkly-token"
version = "0.1.0"
description = "Arkly Capital Token Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arkly_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
