[package]
name = "property-vault"
version = "0.1.0"
description = "Arkly Capital Property Vault Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "property_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
